--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   text-align: center;
   font-family: Arial, sans-serif;
   box-sizing: border-box;
+  padding-top: 50px;
 }
 
 /* Style the result message */
